// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart - Item.mobile Should match snapshot as contract with line notes 1`] = `
<div>
  <div
    class="MuiBox-root css-1iy8us4"
  >
    <div
      class="MuiBox-root css-nqdwa1"
    >
      <div
        class="MuiBox-root css-i3pbo"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-x3cpnl"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fysqgs-MuiTypography-root-MuiLink-root"
                href="/product/generic-1-2-wrot-copper-cap-ccapd/MSC-33860"
              >
                <img
                  alt="1/2\\" Wrot Copper Cap"
                  class="MuiBox-root css-idsjlm"
                  src="http://images.tradeservice.com/ProductImages/DIR100103/MUELER_W-07004_MED.jpg"
                />
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-kfrp3-MuiGrid-root"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap css-pad2pl-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
            data-testid="cart-item-manufacturer-name-0"
          >
            Generic
          </span>
          <div>
            <p
              aria-label="1/2\\" Wrot Copper Cap"
              class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
              data-mui-internal-clone-element="true"
              data-testid="cart-item-product-name-0"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                href="/product/generic-1-2-wrot-copper-cap-ccapd/MSC-33860"
              >
                1/2" Wrot Copper Cap
              </a>
            </p>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-zex3r6-MuiTypography-root"
              data-testid="cart-item-part-number-0"
            >
              Part#
               
              33860
            </span>
            <span
              class="MuiTypography-root MuiTypography-caption css-qagaf3-MuiTypography-root"
              data-testid="cart-item-manufacturer-number-0"
            >
              MFR#
               
              CCAPD
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-auto css-18wiyal-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1d0yzg8"
          >
            <div
              class="MuiBox-root css-pori7h"
            >
              <span
                class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
              >
                Order Qty
              </span>
              <div
                class="MuiBox-root css-d0uhtl"
              >
                <span
                  class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
                  data-testid="cart-item-order-qty-0"
                >
                  1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="test"
        class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap css-1t486iq-MuiGrid-root"
        data-mui-internal-clone-element="true"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-auto css-48hhhr-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-64pe8k-MuiTypography-root"
          >
            Line Notes
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true css-sqw2nl-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1hdqiad-MuiTypography-root"
          >
            test
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container css-2a4e9h-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-4 css-16lfl4z-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1ebnygn"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
            >
              Price
            </span>
          </div>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
            data-testid="cart-item-unit-price-0"
          >
            $43.00 ea
          </h5>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-4 css-1bay0si-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1ebnygn"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-6b5z9k-MuiTypography-root"
            >
              Order Total
            </span>
          </div>
          <h5
            class="MuiTypography-root MuiTypography-h5 MuiTypography-noWrap css-1fmbqzj-MuiTypography-root"
            data-testid="cart-item-total-price-0"
          >
            $43.00
          </h5>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-4rm8pb-MuiDivider-root"
    />
  </div>
</div>
`;

exports[`Cart - Item.mobile Should match snapshot as readOnly 1`] = `
<div>
  <div
    class="MuiBox-root css-1m9t0zg"
  >
    <div
      class="MuiBox-root css-nqdwa1"
    >
      <div
        class="MuiBox-root css-i3pbo"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-x3cpnl"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fysqgs-MuiTypography-root-MuiLink-root"
                href="/product/generic-1-2-wrot-copper-cap-ccapd/MSC-33860"
              >
                <img
                  alt="1/2\\" Wrot Copper Cap"
                  class="MuiBox-root css-idsjlm"
                  src="http://images.tradeservice.com/ProductImages/DIR100103/MUELER_W-07004_MED.jpg"
                />
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-kfrp3-MuiGrid-root"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap css-pad2pl-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
            data-testid="cart-item-manufacturer-name-0"
          >
            Generic
          </span>
          <div>
            <p
              aria-label="1/2\\" Wrot Copper Cap"
              class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
              data-mui-internal-clone-element="true"
              data-testid="cart-item-product-name-0"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                href="/product/generic-1-2-wrot-copper-cap-ccapd/MSC-33860"
              >
                1/2" Wrot Copper Cap
              </a>
            </p>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-zex3r6-MuiTypography-root"
              data-testid="cart-item-part-number-0"
            >
              Part#
               
              33860
            </span>
            <span
              class="MuiTypography-root MuiTypography-caption css-qagaf3-MuiTypography-root"
              data-testid="cart-item-manufacturer-number-0"
            >
              MFR#
               
              CCAPD
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-auto css-18wiyal-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1d0yzg8"
          >
            <div
              class="MuiBox-root css-pori7h"
            >
              <span
                class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
              >
                Order Qty
              </span>
              <div
                class="MuiBox-root css-d0uhtl"
              >
                <span
                  class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
                  data-testid="cart-item-order-qty-0"
                >
                  1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container css-2a4e9h-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-4 css-16lfl4z-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1ebnygn"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
            >
              Price
            </span>
          </div>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
            data-testid="cart-item-unit-price-0"
          >
            $0.43 ea
          </h5>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-11ojwqs-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1ebnygn"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
            >
              Available Qty
            </span>
          </div>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
            data-testid="cart-item-qty-available-0"
          >
            215
          </h5>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ecxygc-MuiTypography-root"
          >
            in stock
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-4 css-1bay0si-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1ebnygn"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-6b5z9k-MuiTypography-root"
            >
              Order Total
            </span>
          </div>
          <h5
            class="MuiTypography-root MuiTypography-h5 MuiTypography-noWrap css-1fmbqzj-MuiTypography-root"
            data-testid="cart-item-total-price-0"
          >
            $0.43
          </h5>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-4rm8pb-MuiDivider-root"
    />
  </div>
</div>
`;

exports[`Cart - Item.mobile Should match snapshot with product 1`] = `
<div>
  <div
    class="MuiBox-root css-1m9t0zg"
  >
    <div
      class="MuiBox-root css-nqdwa1"
    >
      <div
        class="MuiBox-root css-i3pbo"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-x3cpnl"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fysqgs-MuiTypography-root-MuiLink-root"
                href="/product/generic-1-2-wrot-copper-cap-ccapd/MSC-33860"
              >
                <img
                  alt="1/2\\" Wrot Copper Cap"
                  class="MuiBox-root css-idsjlm"
                  src="http://images.tradeservice.com/ProductImages/DIR100103/MUELER_W-07004_MED.jpg"
                />
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-kfrp3-MuiGrid-root"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-1unv2py-MuiButtonBase-root-MuiIconButton-root"
              data-testid="remove-item-button-0"
              tabindex="0"
              type="button"
            >
              <svg>
                delete-bin.svg
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap css-pad2pl-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
            data-testid="cart-item-manufacturer-name-0"
          >
            Generic
          </span>
          <div>
            <p
              aria-label="1/2\\" Wrot Copper Cap"
              class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
              data-mui-internal-clone-element="true"
              data-testid="cart-item-product-name-0"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                href="/product/generic-1-2-wrot-copper-cap-ccapd/MSC-33860"
              >
                1/2" Wrot Copper Cap
              </a>
            </p>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-zex3r6-MuiTypography-root"
              data-testid="cart-item-part-number-0"
            >
              Part#
               
              33860
            </span>
            <span
              class="MuiTypography-root MuiTypography-caption css-qagaf3-MuiTypography-root"
              data-testid="cart-item-manufacturer-number-0"
            >
              MFR#
               
              CCAPD
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-auto css-18wiyal-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1j3agu2"
          >
            <div
              class="MuiBox-root css-yvkhq8"
            >
              <div
                class="number-input__container full-width"
              >
                <div
                  class="number-input__button-container small"
                >
                  <button
                    class="number-input__button"
                    data-testid="quantity-input-down-0"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="RemoveIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13H5v-2h14v2z"
                      />
                    </svg>
                  </button>
                </div>
                <input
                  class="number-input__input small"
                  data-testid="quantity-input-0"
                  index="0"
                  min="1"
                  value="1"
                />
                <div
                  class="number-input__button-container small"
                >
                  <button
                    class="number-input__button"
                    data-testid="quantity-input-up-0"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="AddIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container css-2a4e9h-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-4 css-16lfl4z-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1ebnygn"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
            >
              Price
            </span>
          </div>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
            data-testid="cart-item-unit-price-0"
          >
            $0.43 ea
          </h5>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-11ojwqs-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1ebnygn"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
            >
              Available Qty
            </span>
          </div>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
            data-testid="cart-item-qty-available-0"
          >
            215
          </h5>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ecxygc-MuiTypography-root"
          >
            in stock
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-4 css-1bay0si-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1ebnygn"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-6b5z9k-MuiTypography-root"
            >
              Order Total
            </span>
          </div>
          <h5
            class="MuiTypography-root MuiTypography-h5 MuiTypography-noWrap css-1fmbqzj-MuiTypography-root"
            data-testid="cart-item-total-price-0"
          >
            $0.43
          </h5>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-4rm8pb-MuiDivider-root"
    />
  </div>
</div>
`;
